# android_call_log_converter

./: .gitignore  README.md  calllog_exporter.py  pyproject.toml
call_log_converter/: __init__.py  __main__.py  cli.py  models.py
